<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tal.abctime.ProfileActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/AppTheme.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/babyinfo_settings_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="已有账户"
        android:textSize="16sp"
        style="@style/AppTheme.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        style="@style/AppTheme.TextView.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/info_name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@id/divider_name" />


    <com.tal.abctime.view.EditTextWithDel
        android:id="@+id/profile_et_name"
        style="@style/AppTheme.EditText.Noline"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="请输入宝宝的名字"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintBottom_toTopOf="@+id/divider_name" />

    <View
        android:id="@+id/divider_name"
        android:layout_width="325dp"
        android:layout_height="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/line_divider"
        android:layerType="software"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_age"></View>

    <TextView
        android:id="@+id/tv_age"
        style="@style/AppTheme.TextView.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/info_age"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/profile_age_rg" />

    <RadioGroup
        android:id="@+id/profile_age_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizon">

        <RadioButton
            android:id="@+id/two_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="2" />

        <RadioButton
            android:id="@+id/three_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />

        <RadioButton
            android:id="@+id/five_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />

        <RadioButton
            android:id="@+id/seven_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />

        <RadioButton
            android:id="@+id/four_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6" />

        <RadioButton
            android:id="@+id/six_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7" />

        <RadioButton
            android:id="@+id/eight_rb"
            style="@style/AppTheme.RadioButton.Box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8+" />
    </RadioGroup>

    <View
        android:id="@+id/age_divider"
        android:layout_width="325dp"
        android:layout_height="8dp"
        android:layout_marginTop="@dimen/info_widget_margin"
        android:background="@drawable/line_divider"
        android:layerType="software"
        app:layout_constraintStart_toStartOf="@+id/profile_age_rg"
        app:layout_constraintTop_toBottomOf="@+id/profile_age_rg"></View>

    <TextView
        android:id="@+id/tv_gender"
        style="@style/AppTheme.TextView.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/info_gender"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/age_divider" />

    <RadioGroup
        android:id="@+id/profile_gender_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/info_widget_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/tv_gender"
        app:layout_constraintTop_toTopOf="@+id/tv_gender">

        <RadioButton
            android:id="@+id/male_rb"
            style="@style/AppTheme.RadioButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_gender_boy" />

        <RadioButton
            android:id="@+id/famale_rb"
            style="@style/AppTheme.RadioButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/info_radio_gender_margin_left"
            android:text="@string/info_gender_girl" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="262dp" />

    <include
        layout="@layout/profile_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/profile_imgBtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nav_btn_back"
        app:layout_constraintEnd_toStartOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_btn_submit"
        style="@style/AppTheme.Button.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:text="完成提交信息"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_horizon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />


</android.support.constraint.ConstraintLayout>
